Un poco de menu

--- a/AngularApp/src/styles.css
+++ b/AngularApp/src/styles.css
@@ -1,2 +1,46 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.min.css';
+
+body {
+    background: url("assets/icons/wallpaper_restaurant_3.jpg");
+}
+
+.imageB {
+    border-radius: 50%;
+    width: 20%;
+}
+
+.centerDiv{
+    margin:0 auto;
+    width: 100%;
+    text-align: center
+}
+
+.centerBtn{
+    text-align: center;
+}
+
+.centerTitle {
+    text-align: center;
+}
+
+.acceptButton {
+    background-color: rgb(252, 54, 80);
+    color: #fff;
+    font-weight: bold;
+    font-size: large;
+    border: none;
+}
+
+.cancelButton {
+    background-color: rgb(177, 177, 177);
+    color: #fff;
+    font-weight: bold;
+    font-size: large;
+    border: none;
+}
+
+body, html {
+    height: 100%;
+    width: 100%;
+}
