--- a/AngularApp/src/app/manager/menu-restaurant/menu-restaurant.component.html
+++ b/AngularApp/src/app/manager/menu-restaurant/menu-restaurant.component.html
@@ -1,1 +1,26 @@
-<button type="button" class="btn btn-primary">Primary</button>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Restaurante Pancho</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <div *ngFor="let item of navItems" class="navbar-nav">
+          <a class="nav-item nav-link" href="#">{{item.item}}</a>
+      </div>
+    </div>
+  </nav>
+  <div class="card centerDiv" style="width: 75%; margin-top: 6%">
+    <div class="card-body">
+        <h5 class="card-title">Menu Pancho Restaurante</h5>
+        <!-- menu list -->
+      <div class="form-group row">
+        <div class="col">
+          <label class="col col-form-label">Pinto con huevo y natilla</label>
+        </div>
+        <div class="col">
+          <button class="btn btn-primary" type="button">Ver/Editar</button>
+          <button class="btn btn-primary" type="button">Eliminar</button>
+        </div>
+      </div>
+    </div>
+  </div>
