--- a/AngularApp/src/app/manager/menu-restaurant/menu-restaurant.component.html
+++ b/AngularApp/src/app/manager/menu-restaurant/menu-restaurant.component.html
@@ -9,11 +9,14 @@
       </div>
     </div>
   </nav>
-  <div class="card centerDiv" style="width: 75%; margin-top: 6%">
+  <div class="card  centerDiv" style="width: 75%; margin-top: 6%">
     <div class="card-body">
         <h5 class="card-title">Menu Pancho Restaurante</h5>
+        <div class="">
+
+        </div>
         <!-- menu list -->
-      <div *ngFor="let platillo of platillos">
+      <!-- <div *ngFor="let platillo of platillos">
           <div class="form-group row">
             <img class="imageB" src="platillo.imagen"
             name="profile" alt="Card image cap">
@@ -25,6 +28,6 @@
             <button class="btn btn-primary" type="button">Eliminar</button>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
