--- a/AngularApp/src/app/manager/menu-restaurant/menu-restaurant.component.css
+++ b/AngularApp/src/app/manager/menu-restaurant/menu-restaurant.component.css
@@ -1,3 +1,26 @@
 .opacity {
-    opacity: 0.5;
+    opacity: 0.7;
+}
+
+
+.font-title {
+    font-family: 'Pangolin', cursive;
+    font-size: 50px;
+    color: white;
+}
+
+.font-subtitle {
+    font-family: 'Pangolin', cursive;
+    font-size: 25px;
+    color: blanchedalmond;
+}
+
+.font-normal-sub {
+    font-family: 'Pangolin', cursive;
+    font-size: 20px;
+    color: white;
+}
+
+.menu {
+    background-image: url("/../assets/icons/menu.jpg");
 }
