--- a/AngularApp/src/app/main/menu-restaurant/menu-restaurant.component.html
+++ b/AngularApp/src/app/main/menu-restaurant/menu-restaurant.component.html
@@ -3,7 +3,7 @@
   <section class="jumbotron text-center menu" style="margin: 0%">
     <div class="container">
       <h5 class="card-title font-subtitle">Menú de</h5>
-      <h6 class="card-title font-title">McDonalds</h6>
+      <h6 class="card-title font-title">{{restName}}</h6>
       <label style="margin-top: 6%" class="col col-form-label font-normal-sub">Observar platillos por categoría</label>  
         <div class="form-group row">
           <div class="col-md-4 offset-md-4">
@@ -21,13 +21,14 @@
       <div class="row">
         <div *ngFor="let plat of platillos$" class="col-md-4">
           <div class="card mb-4 box-shadow">
-            <img class="card-img-top" src="{{plat.imagen}}" data-holder-rendered="true">
+            <img class="card-img-top" src="{{plat.imagen}}" width="200px" data-holder-rendered="true"> 
             <div class="card-body">
               <h5 class="card-title">{{plat.nombre}}</h5>
               <p class="card-text">{{plat.descripcion}}</p>
+              <p class="card-text">Precio: {{plat.precio}}</p> 
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" (click)="editPlat(plat)" class="btn btn-sm btn-danger">Ver/Editar</button>
+                  <button type="button" (click)="editPlat(plat)" class="btn btn-sm btn-danger">Editar</button>
                   <button type="button" class="btn btn-sm btn-danger">Eliminar</button>
                 </div>
               </div>
@@ -42,14 +43,51 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <img src="{{plate$.imagen}}" data-holder-rendered="true">
+          <img class="card-img-top" src="{{imagePlate}}" width="300px" data-holder-rendered="true"> 
         </div>
         <div class="modal-body">
-          <p>{{plate$.descripcion}}</p>
+            <div class="form-group row"> 
+                <label class="col-sm-3 col-form-label">Nombre: </label> 
+                <div class="col-sm-8"> 
+                  <input type="text" [(ngModel)]="namePlate" class="form-control" id="nameP" placeholder="Nuevo nombre..."> 
+                </div> 
+              </div> 
+            <div class="form-group row"> 
+              <label class="col-sm-3 col-form-label">Descripción: </label> 
+              <div class="col-sm-8"> 
+                <textarea class="form-control" maxlength="150" [(ngModel)]="descriptionPlate" rows="4"></textarea> 
+              </div> 
+            </div> 
+            <div class="form-group row"> 
+              <label class="col-sm-3 col-form-label">Precio: </label> 
+              <div class="col-sm-8"> 
+                <div class="input-group"> 
+                  <div class="input-group-prepend"> 
+                    <span class="input-group-text">₡</span> 
+                  </div> 
+                  <input type="text" [(ngModel)]="pricePlate" class="form-control" aria-label="Amount (to the nearest dollar)" placeholder="Nuevo precio..."> 
+                  <div class="input-group-append"> 
+                    <span class="input-group-text">.00</span> 
+                  </div> 
+                </div> 
+              </div> 
+            </div> 
+            <div class="form-group row"> 
+              <label class="col-sm-3 col-form-label">Categoría: </label> 
+              <div class="col-sm-8"> 
+                <input type="text" [(ngModel)]="categoryPlate" class="form-control" id="catP" placeholder="Nueva categoría..."> 
+              </div> 
+            </div> 
+            <div class="form-group row"> 
+                <label class="col-sm-3 col-form-label">Imagen: </label> 
+                <div class="col-sm-8"> 
+                  <input type="text" [(ngModel)]="imagePlate" class="form-control" id="imageP" placeholder="Link nueva imagen..."> 
+                </div> 
+              </div> 
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-secondary">Cancelar</button> 
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Guardar</button> 
         </div>
       </div>
     </div>
