--- a/AngularApp/src/app/main/menu-restaurant/menu-restaurant.component.html
+++ b/AngularApp/src/app/main/menu-restaurant/menu-restaurant.component.html
@@ -28,8 +28,8 @@
               <p class="card-text">Precio: {{plat.precio}}</p> 
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" (click)="editPlat(plat)" class="btn btn-sm btn-danger">Editar</button>
-                  <button type="button" class="btn btn-sm btn-danger">Eliminar</button>
+                  <button type="button" (click)="editPlatModal(plat)" class="btn btn-sm btn-danger">Editar</button>
+                  <button type="button" (click)="delPlatModal(plat)" class="btn btn-sm btn-danger">Eliminar</button>
                 </div>
               </div>
             </div>
@@ -48,9 +48,10 @@
         <div class="modal-body">
             <div class="form-group row"> 
                 <label class="col-sm-3 col-form-label">Nombre: </label> 
-                <div class="col-sm-8"> 
+                <!-- <div class="col-sm-8"> 
                   <input type="text" [(ngModel)]="namePlate" class="form-control" id="nameP" placeholder="Nuevo nombre..."> 
-                </div> 
+                </div>  -->
+                <h5 class="col-sm-8 col-form-label">{{namePlate}}</h5> 
               </div> 
             <div class="form-group row"> 
               <label class="col-sm-3 col-form-label">Descripción: </label> 
@@ -89,10 +90,59 @@
               </div> 
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary">Cancelar</button> 
-          <button type="button" class="btn btn-danger" data-dismiss="modal">Guardar</button> 
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button> 
+          <button type="button" id="modalEditFoodSaveChanges" class="btn btn-danger" data-dismiss="modal">Guardar</button> 
         </div>
       </div>
     </div>
   </div>
+  <!-- confirmation modal -->
+  <div class="modal" id="modalSuccess" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Transacción exitosa</h5>
+        </div>
+        <div class="modal-body">
+          <p>{{successMessage}}</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Aceptar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- failed modal -->
+  <div class="modal" id="modalFailed" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Transacción fallida</h5>
+        </div>
+        <div class="modal-body">
+          <p>{{failedMessage}}</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Aceptar</button>
+        </div>
+      </div>
+    </div>
+    </div>
+    <!-- delete platillo -->
+    <div class="modal" id="modalDelFood" tabindex="-1" role="dialog">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Eliminar platillo</h5>
+          </div>
+          <div class="modal-body">
+            <p>Está seguro de eliminar este platillo?</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+            <button type="button" class="btn btn-danger" id="modalDelFoodSaveChanges" data-dismiss="modal">Aceptar</button>
+          </div>
+        </div>
+      </div>
+    </div>
 </main>
