--- a/AngularApp/src/app/main/menu-restaurant/menu-restaurant.component.css
+++ b/AngularApp/src/app/main/menu-restaurant/menu-restaurant.component.css
@@ -2,7 +2,6 @@
     opacity: 0.7;
 }
 
-
 .font-title {
     font-family: 'Pangolin', cursive;
     font-size: 50px;
@@ -28,3 +27,18 @@
 textarea { 
     resize: none; 
 }   
+
+.btn-add {
+    border-radius: 50%;
+    font-size: 24px
+}
+
+.float{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:40px;
+	right:40px;
+	text-align:center;
+	box-shadow: 2px 2px 3px #999;
+}
