--- a/AngularApp/src/app/main/menu-restaurant/menu-restaurant.component.html
+++ b/AngularApp/src/app/main/menu-restaurant/menu-restaurant.component.html
@@ -1,18 +1,22 @@
 <main role="main">
   <!-- show categories -->
-  <section class="jumbotron text-center menu" style="margin: 0%">
-    <div class="container">
+  <section class="jumbotron menu" style="margin: 0%; padding: 16px 8px 64px">
+    <div class="container text-center">
       <h5 class="card-title font-subtitle">Menú de</h5>
       <h6 class="card-title font-title">{{restName}}</h6>
       <label style="margin-top: 6%" class="col col-form-label font-normal-sub">Observar platillos por categoría</label>  
-        <div class="form-group row">
-          <div class="col-md-4 offset-md-4">
-            <select id="selectedCategory" [(ngModel)]="catSelected" (change)="updateMenu()" class="form-control opacity">
-                <option *ngFor="let cat of categories"
-                  [value]="cat">{{cat}}</option> 
-              </select>
-            </div>
+      <div class="form-group row">
+        <div class="col-md-4 offset-md-4">
+          <select id="selectedCategory" [(ngModel)]="catSelected" (change)="updateMenu()" class="form-control opacity">
+            <option *ngFor="let cat of categories"
+              [value]="cat">{{cat}}</option> 
+          </select>
         </div>
+      </div>
+    </div>
+    <div style="text-align: right">
+      <button type="button" (click)="addPlatModal()" class="btn btn-danger btn-add float"><i class="material-icons">
+        add</i></button>
     </div>
   </section>
   <!-- platillos -->
@@ -43,20 +47,19 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <img class="card-img-top" src="{{imagePlate}}" width="300px" data-holder-rendered="true"> 
+          <img class="card-img-top" src="{{imagePlate}}" width="200px" data-holder-rendered="true"> 
         </div>
         <div class="modal-body">
             <div class="form-group row"> 
-                <label class="col-sm-3 col-form-label">Nombre: </label> 
-                <!-- <div class="col-sm-8"> 
-                  <input type="text" [(ngModel)]="namePlate" class="form-control" id="nameP" placeholder="Nuevo nombre..."> 
-                </div>  -->
-                <h5 class="col-sm-8 col-form-label">{{namePlate}}</h5> 
+              <label class="col-sm-3 col-form-label">Nombre: </label> 
+              <div class="col-sm-8"> 
+                <input type="text" [(ngModel)]="namePlate" class="form-control" id="nameP" placeholder="Nombre..."> 
               </div> 
+            </div> 
             <div class="form-group row"> 
               <label class="col-sm-3 col-form-label">Descripción: </label> 
               <div class="col-sm-8"> 
-                <textarea class="form-control" maxlength="150" [(ngModel)]="descriptionPlate" rows="4"></textarea> 
+                <textarea class="form-control" maxlength="150" [(ngModel)]="descriptionPlate" rows="4" placeholder="Pequeña descripción..."></textarea> 
               </div> 
             </div> 
             <div class="form-group row"> 
@@ -66,7 +69,7 @@
                   <div class="input-group-prepend"> 
                     <span class="input-group-text">₡</span> 
                   </div> 
-                  <input type="text" [(ngModel)]="pricePlate" class="form-control" aria-label="Amount (to the nearest dollar)" placeholder="Nuevo precio..."> 
+                  <input type="text" [(ngModel)]="pricePlate" class="form-control" aria-label="Amount (to the nearest dollar)" placeholder="Precio..."> 
                   <div class="input-group-append"> 
                     <span class="input-group-text">.00</span> 
                   </div> 
@@ -85,7 +88,7 @@
             <div class="form-group row"> 
                 <label class="col-sm-3 col-form-label">Imagen: </label> 
                 <div class="col-sm-8"> 
-                  <input type="text" [(ngModel)]="imagePlate" class="form-control" id="imageP" placeholder="Link nueva imagen..."> 
+                  <input type="text" [(ngModel)]="imagePlate" class="form-control" id="imageP" placeholder="Link imagen..."> 
                 </div> 
               </div> 
         </div>
@@ -112,6 +115,65 @@
       </div>
     </div>
   </div>
+  <!-- add new plate -->
+  <div class="modal fade bd-example-modal-lg" id="modalCreateFood" tabindex="-1" role="dialog">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <img class="card-img-top" src="{{imagePlate}}" width="300px" data-holder-rendered="true"> 
+          </div>
+          <div class="modal-body">
+              <div class="form-group row"> 
+                <label class="col-sm-3 col-form-label">Nombre: </label> 
+                <div class="col-sm-8"> 
+                  <input type="text" [(ngModel)]="namePlate" class="form-control" id="nameP" placeholder="Nuevo nombre..."> 
+                </div> 
+              </div> 
+              <div class="form-group row"> 
+                <label class="col-sm-3 col-form-label">Descripción: </label> 
+                <div class="col-sm-8"> 
+                  <textarea class="form-control" maxlength="150" [(ngModel)]="descriptionPlate" rows="4"></textarea> 
+                </div> 
+              </div> 
+              <div class="form-group row"> 
+                <label class="col-sm-3 col-form-label">Precio: </label> 
+                <div class="col-sm-8"> 
+                  <div class="input-group"> 
+                    <div class="input-group-prepend"> 
+                      <span class="input-group-text">₡</span> 
+                    </div> 
+                    <input type="text" [(ngModel)]="pricePlate" class="form-control" aria-label="Amount (to the nearest dollar)" placeholder="Nuevo precio..."> 
+                    <div class="input-group-append"> 
+                      <span class="input-group-text">.00</span> 
+                    </div> 
+                  </div> 
+                </div> 
+              </div> 
+              <div class="form-group row"> 
+                <label class="col-sm-3 col-form-label">Categoría: </label> 
+                <div class="col-sm-8"> 
+                  <select [(ngModel)]="categoryPlate" class="form-control opacity">
+                    <option *ngFor="let cat of allCategories"
+                      [value]="cat">{{cat}}</option> 
+                    </select>
+                </div> 
+              </div> 
+              <div class="form-group row"> 
+                  <label class="col-sm-3 col-form-label">Imagen: </label> 
+                  <div class="col-sm-8"> 
+                    <input type="text" [(ngModel)]="imagePlate" class="form-control" id="imageP" placeholder="Link nueva imagen..."> 
+                  </div> 
+                </div> 
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button> 
+            <button type="button" id="modalCreateFoodCreate" class="btn btn-danger" data-dismiss="modal">Guardar</button> 
+          </div>
+        </div>
+      </div>
+    </div>
+
+  <!-- MODALS ABOUT INFORMATION -->
   <!-- failed modal -->
   <div class="modal" id="modalFailed" tabindex="-1" role="dialog">
     <div class="modal-dialog modal-dialog-centered" role="document">
