--- a/AngularApp/src/app/main/menu-restaurant/menu-restaurant.component.html
+++ b/AngularApp/src/app/main/menu-restaurant/menu-restaurant.component.html
@@ -14,18 +14,14 @@
         </div>
       </div>
     </div>
-    <div style="text-align: right">
-      <button type="button" (click)="addPlatModal()" class="btn btn-danger btn-add float"><i class="material-icons">
-        add</i></button>
-    </div>
   </section>
   <!-- platillos -->
   <div class="album py-5 bg-light">
     <div class="container">
       <div class="row">
-        <div *ngFor="let plat of platillos$" class="col-md-4">
+        <div *ngFor="let plat of platillos" class="col-md-4">
           <div class="card mb-4 box-shadow">
-            <img class="card-img-top" src="{{plat.imagen}}" width="200px" data-holder-rendered="true"> 
+            <img class="card-img-top fix-image-list" src="{{plat.imagen}}" data-holder-rendered="true"> 
             <div class="card-body">
               <h5 class="card-title">{{plat.nombre}}</h5>
               <p class="card-text">{{plat.descripcion}}</p>
@@ -49,7 +45,7 @@
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <img class="card-img-top" src="{{imagePlate}}" width="300px" data-holder-rendered="true"> 
+          <img class="card-img-top" src="{{imagePlate}}" width="100px" data-holder-rendered="true"> 
         </div>
         <div class="modal-body">
             <div class="form-group row"> 
@@ -88,15 +84,15 @@
               </div> 
             </div> 
             <div class="form-group row"> 
-                <label class="col-sm-3 col-form-label">Link a imagen: </label> 
-                <div class="col-sm-8"> 
-                  <input type="text" [(ngModel)]="imagePlate" class="form-control" id="imageP" placeholder="Link nueva imagen..."> 
-                </div> 
+              <label class="col-sm-3 col-form-label">Link a imagen: </label> 
+              <div class="col-sm-8"> 
+                <input type="text" [(ngModel)]="imagePlate" class="form-control" id="imageP" placeholder="Link nueva imagen..."> 
               </div> 
+            </div> 
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button> 
-          <button type="button" id="modalEditFoodSaveChanges" class="btn btn-danger" data-dismiss="modal">Guardar</button> 
+          <button type="button" (click)="updatePlat()" id="modalEditFoodSaveChanges" class="btn btn-danger" data-dismiss="modal">Guardar</button> 
         </div>
       </div>
     </div>
@@ -107,7 +103,7 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <img class="card-img-top" src="{{imagePlate}}" width="200px" data-holder-rendered="true"> 
+          <img class="card-img-top" src="{{imagePlate}}" width="100px" data-holder-rendered="true"> 
         </div>
         <div class="modal-body">
             <div class="form-group row"> 
@@ -154,7 +150,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button> 
-          <button type="button" id="modalCreateFoodCreate" class="btn btn-danger" data-dismiss="modal">Guardar</button> 
+          <button type="button" (click)="createPlat()" id="modalCreateFoodCreate" class="btn btn-danger" data-dismiss="modal">Guardar</button> 
         </div>
       </div>
     </div>
@@ -205,9 +201,13 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-          <button type="button" class="btn btn-danger" id="modalDelFoodSaveChanges" data-dismiss="modal">Aceptar</button>
+          <button type="button" class="btn btn-danger" (click)="deletePlat()" id="modalDelFoodSaveChanges" data-dismiss="modal">Aceptar</button>
         </div>
       </div>
     </div>
+  </div>
+  <div style="text-align: right">
+    <button type="button" (click)="addPlatModal()" class="btn btn-danger btn-add float"><i class="material-icons">
+      add</i></button>
   </div>
 </main>
