Working on paginator

--- a/AngularApp/src/app/main/orders/declined/declined.component.html
+++ b/AngularApp/src/app/main/orders/declined/declined.component.html
@@ -1,3 +1,19 @@
-<p>
-  declined works!
-</p>
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th *ngFor="let head of headers" scope="col">{{head}}</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let order of orders" scope="row">
+      <td>{{order.cantidad}}</td>
+      <td>{{order.platillo}}</td>
+      <td>{{order.fecha | date: 'dd/MM/yyyy'}}</td>
+      <td>{{order.fecha | date:'shortTime'}}</td>
+      <td>{{order.email}}</td>
+      <td>{{order.estado}}</td>
+      <td>{{order.ubicacion._latitude}}°, {{order.ubicacion._longitude}}°</td>
+      <td>Sin producto</td>
+    </tr>
+  </tbody>
+</table>
