--- a/AngularApp/src/app/main/orders/pending/pending.component.html
+++ b/AngularApp/src/app/main/orders/pending/pending.component.html
@@ -1,3 +1,44 @@
-<p>
-  pending works!
-</p>
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th *ngFor="let head of headers" scope="col">{{head}}</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let order of orders" scope="row">
+      <td>{{order.cantidad}}</td>
+      <td>{{order.platillo}}</td>
+      <td>{{order.fecha | date: 'dd/MM/yyyy'}}</td>
+      <td>{{order.fecha | date:'shortTime'}}</td>
+      <td>{{order.email}}</td>
+      <td>{{order.estado}}</td>
+      <td>{{order.ubicacion._latitude}}°, {{order.ubicacion._longitude}}°</td>
+      <td><div class="btn-group">
+        <button class="btn btn-warning">Aprobar</button>
+        <button class="btn btn-warning" (click)="modalDeclineOrder()">Rechazar</button>
+      </div></td>
+    </tr>
+  </tbody>
+</table>
+<!-- decline modal -->
+<div class="modal" id="modalDecline" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Rechazar pedido</h5>
+        </div>
+        <div class="modal-body">
+          <div class="form-group row"> 
+            <label class="col-sm-4 col-form-label">Razón de rechazo: </label> 
+            <div class="col-sm-8"> 
+              <input type="text" [(ngModel)]="declineReason" class="form-control" id="nameP" placeholder="Justificación..."> 
+            </div> 
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+          <button type="button" (click)="declineOrder()" class="btn btn-info" data-dismiss="modal">Aceptar</button>
+        </div>
+      </div>
+    </div>
+  </div>
