--- a/AngularApp/src/app/main/orders/approved/approved.component.html
+++ b/AngularApp/src/app/main/orders/approved/approved.component.html
@@ -1,17 +1,20 @@
-<table class="table">
+<table class="table table-hover">
   <thead>
     <tr>
       <th *ngFor="let head of headers" scope="col">{{head}}</th>
     </tr>
   </thead>
   <tbody>
-    <tr scope="row">
-      <td *ngFor="let order of orders">{{order.cantidad}}</td>
-      <td *ngFor="let order of orders">{{order.platillo}}</td>
-      <td *ngFor="let order of orders">{{order.fecha}}</td>
-      <td *ngFor="let order of orders">{{order.email}}</td>
-      <td *ngFor="let order of orders">{{order.estado}}</td>
-      <td *ngFor="let order of orders">{{order.ubicacion._latitude}} y {{order.ubicacion._longitude}}</td>
+    <tr *ngFor="let order of orders" scope="row" >
+      <td>{{order.cantidad}}</td>
+      <td>{{order.platillo}}</td>
+      <td>{{order.fecha | date: 'dd/MM/yyyy'}}</td>
+      <td>{{order.fecha | date:'shortTime'}}</td>
+      <td>{{order.email}}</td>
+      <td>{{order.estado}}</td>
+      <td>{{order.ubicacion._latitude}}°, {{order.ubicacion._longitude}}°</td>
+      <td><input type="checkbox" (change)="isFinished($event)"></td>
     </tr>
   </tbody>
 </table>
+<ngb-pagination style="color: aqua" [collectionSize]="total" [(page)]="page" [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true"></ngb-pagination>
