--- a/AngularApp/src/app/main/menu-restaurant/menu-restaurant.component.html
+++ b/AngularApp/src/app/main/menu-restaurant/menu-restaurant.component.html
@@ -38,6 +38,7 @@
       </div>
     </div>
   </div>
+  <ngb-pagination class="col-md-12 justify-content-center" [collectionSize]="total" [(page)]="page" [maxSize]="3" [rotate]="true" [ellipses]="false" [boundaryLinks]="true"></ngb-pagination>
   <!-- pagination -->
 
   <!-- modify food -->
