--- a/AngularApp/src/app/main/orders/declined/declined.component.html
+++ b/AngularApp/src/app/main/orders/declined/declined.component.html
@@ -17,3 +17,4 @@
     </tr>
   </tbody>
 </table>
+<ngb-pagination class="col-md-12 justify-content-center" [collectionSize]="total" [(page)]="page" [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true"></ngb-pagination>
