--- a/AngularApp/src/app/main/orders/pending/pending.component.html
+++ b/AngularApp/src/app/main/orders/pending/pending.component.html
@@ -20,6 +20,7 @@
     </tr>
   </tbody>
 </table>
+<ngb-pagination class="col-md-12 justify-content-center" [collectionSize]="total" [(page)]="page" [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true"></ngb-pagination>
 <!-- decline modal -->
 <div class="modal" id="modalDecline" tabindex="-1" role="dialog">
     <div class="modal-dialog modal-dialog-centered" role="document">
