--- a/AngularApp/src/app/main/menu-restaurant/menu-restaurant.component.css
+++ b/AngularApp/src/app/main/menu-restaurant/menu-restaurant.component.css
@@ -5,3 +5,23 @@
 .fix-image-list{
     height: 200px
 }
+
+.justify-content-center {
+    display: flex !important;
+    justify-content: center !important;
+}
+
+ngb-pagination /deep/ .page-item.active .page-link {
+    background-color: #c82333 !important;
+    border: lightgray solid 1px;
+    color: white;
+}
+
+ngb-pagination /deep/ .page-item .page-link {
+    border: lightgray solid 1px;
+    color: black;   
+}
+
+ngb-pagination /deep/ .page-item.disabled .page-link {
+    color: gray;   
+}
