--- a/AngularApp/src/app/main/orders/orders.component.css
+++ b/AngularApp/src/app/main/orders/orders.component.css
@@ -5,3 +5,13 @@
 .order {
     background-image: url("/../assets/icons/orders_1.jpg");
 }
+
+.menu-tool{
+    font-size: 50px;
+    color: lightblue;
+    text-align: right
+}
+
+.dropdown-toggle::after {
+    display:none;
+}
