Arreglos en pedidos

--- a/AngularApp/src/app/main/menu-restaurant/menu-restaurant.component.html
+++ b/AngularApp/src/app/main/menu-restaurant/menu-restaurant.component.html
@@ -175,7 +175,7 @@
       </div>
     </div>
   </div>
-  <div style="text-align: right">
+  <div style="text-align: right;">
     <button type="button" (click)="addPlatModal()" class="btn btn-danger btn-add float"><i class="material-icons">
       add</i></button>
   </div>
