--- a/AngularApp/src/app/main/orders/orders.component.css
+++ b/AngularApp/src/app/main/orders/orders.component.css
@@ -15,3 +15,22 @@
 .dropdown-toggle::after {
     display:none;
 }
+
+ngb-pagination /deep/ ul.pagination {
+    margin-bottom: 0%
+}
+
+ngb-pagination /deep/ .page-item.active .page-link {
+    background-color: #117a8b !important;
+    border: lightgray solid 1px;
+    color: white;
+}
+
+ngb-pagination /deep/ .page-item .page-link {
+    border: lightgray solid 1px;
+    color: black;   
+}
+
+ngb-pagination /deep/ .page-item.disabled .page-link {
+    color: gray;   
+}
