--- a/AngularApp/src/app/main/orders/orders.component.html
+++ b/AngularApp/src/app/main/orders/orders.component.html
@@ -9,7 +9,7 @@
       <div ngbDropdownMenu>
         <div *ngFor="let o of orderOpts">
           <button (click)="otherOptions(o.opt)" class="dropdown-item">{{o.item}}</button>
-        </div>
+        </div> 
       </div>
     </div>
     <div class="container text-center">
@@ -61,3 +61,133 @@
     </div>
   </div>
 </div>
+<!-- expired modal -->
+<div class="modal" id="modalExpired" tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Pedidos expirados</h5>
+      </div>
+      <div class="modal-body">
+        <div class="table-responsive">
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th *ngFor="let head of expiredHeaders" scope="col">{{head}}</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let order of expiredOrders" scope="row">
+                <td style="text-align: center">{{order.cantidad}}</td>
+                <td>{{order.nombre}}</td>
+                <td>{{order.descripcion}}</td>
+                <td>{{order.fecha | date: 'dd/MM/yyyy'}}</td>
+                <td>{{order.fecha | date:'shortTime'}}</td>
+                <td>{{order.email}}</td>
+                <td>{{order.precio}}</td>
+                <td>{{order.estado}}</td>
+                <td>{{order.categoria}}</td>
+                <td *ngIf="order.ubicacion._latitude == undefined && order.ubicacion._longitude == undefined">
+                  Recoger aquí</td>
+                <td *ngIf="order.ubicacion._latitude != undefined && order.ubicacion._longitude != undefined">
+                  {{order.ubicacion._latitude}}°, {{order.ubicacion._longitude}}°</td>
+                <td>{{order.entrega}}</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <ngb-pagination class="" [collectionSize]="total" [(page)]="page" [maxSize]="3" [rotate]="true" [ellipses]="false" [boundaryLinks]="true"></ngb-pagination>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Atras</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- declined modal -->
+<div style="width:100%"  class="modal" id="modalDeclined" tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-content">
+      <div  class="modal-header">
+        <h5 class="modal-title">Pedidos rechazados</h5>
+      </div>
+      <div class="modal-body">
+        <div class="table-responsive">
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th *ngFor="let head of declinedHeaders" scope="col">{{head}}</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let order of declinedOrders" scope="row">
+                <td style="text-align: center">{{order.cantidad}}</td>
+                <td>{{order.nombre}}</td>
+                <td>{{order.descripcion}}</td>
+                <td>{{order.fecha | date: 'dd/MM/yyyy'}}</td>
+                <td>{{order.fecha | date:'shortTime'}}</td>
+                <td>{{order.email}}</td>
+                <td>{{order.precio}}</td>
+                <td>{{order.estado}}</td>
+                <td>{{order.categoria}}</td>
+                <td *ngIf="order.ubicacion._latitude == undefined && order.ubicacion._longitude == undefined">
+                  Recoger aquí</td>
+                <td *ngIf="order.ubicacion._latitude != undefined && order.ubicacion._longitude != undefined">
+                  {{order.ubicacion._latitude}}°, {{order.ubicacion._longitude}}°</td>
+                <td>{{order.entrega}}</td>
+                <td>Sin producto</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <ngb-pagination class="" [collectionSize]="total" [(page)]="page" [maxSize]="3" [rotate]="true" [ellipses]="false" [boundaryLinks]="true"></ngb-pagination>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Atras</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- order all records modal -->
+<div class="modal" id="modalHistory" tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+      <div class="modal-content">
+        <div  class="modal-header">
+          <h5 style="width:85%" class="modal-title">Historial</h5>
+        </div>
+        <div class="modal-body">
+          <div class="table-responsive">
+            <table class="table table-hover">
+              <thead>
+                <tr>
+                  <th *ngFor="let head of expiredHeaders" scope="col">{{head}}</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let order of historyOrders" scope="row">
+                  <td style="text-align: center">{{order.cantidad}}</td>
+                  <td>{{order.nombre}}</td>
+                  <td>{{order.descripcion}}</td>
+                  <td>{{order.fecha | date: 'dd/MM/yyyy'}}</td>
+                  <td>{{order.fecha | date:'shortTime'}}</td>
+                  <td>{{order.email}}</td>
+                  <td>{{order.precio}}</td>
+                  <td>{{order.estado}}</td>
+                  <td>{{order.categoria}}</td>
+                  <td *ngIf="order.ubicacion._latitude == undefined && order.ubicacion._longitude == undefined">
+                    Recoger aquí</td>
+                  <td *ngIf="order.ubicacion._latitude != undefined && order.ubicacion._longitude != undefined">
+                    {{order.ubicacion._latitude}}°, {{order.ubicacion._longitude}}°</td>
+                  <td>{{order.entrega}}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <ngb-pagination class="" [collectionSize]="total" [(page)]="page" [maxSize]="3" [rotate]="true" [ellipses]="false" [boundaryLinks]="true"></ngb-pagination>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Atras</button>
+        </div>
+      </div>
+    </div>
+  </div>
